# hasc-2026sose

./: .gitignore  Barrier.hh  CMakeLists.txt  Makefile  MessageSystem.hh  README.md  data.tgz  hello_mpi.cc  jacobi_omp.cc  jacobi_seq.cc  jacobi_tbb.cc  lu.cc  make.def  matmul_M2.cc  matmul_omp.cc  matmul_omp_avx512.cc  matmul_seq_v1.cc  matmul_seq_v2.cc  matvec_v1.cc  nbody_generate.hh  nbody_intel_SoA.cc  nbody_io.hh  nbody_mpi.cc  nbody_neon_v2.cc  nbody_omp.cc  nbody_sycl.cc  nbody_tbb_v2.cc  nbody_vanilla.cc  nbody_vectorized_v2.cc  peterson.cc  philosophers.cc  pointer_chasing.cc  power_method.cc  scalar_product_v4.cc  time_experiment.hh  transpose_v1.cc
benchmarking/: Makefile  pointer_chasing.cc  results.txt  time_experiment.hh
cppthreads/: Makefile  barrier.cc  packaged_task.cc  peterson.cc  philosophers.cc  power_method.cc  producer_consumer.cc
hello/: Makefile  hello_sycl.cc
jacobi/: Makefile  gauss_seidel_omp.cc  jacobi_mpi.cc  jacobi_omp.cc  jacobi_omp_stdsimd.cc  jacobi_seq.cc  jacobi_simd.cc  jacobi_tbb.cc
legacy/: hello_sycl.cc  lu.cc  matmul_omp_avx512.cc  matmul_omp_milan.cc  matmul_seq_v2.cc  matvec_v2.cc  nbody_tbb_v2.cc  philosophers.cc  scalar_product_v0.cc  transpose_libraries.cc
matmul/: Makefile  matmul_armneon.cc  matmul_omp_avx512.cc  matmul_omp_stdsimd.cc  matmul_seq.cc  matmul_sycl.cc
matvec/: Makefile  matvec.cc  matvec_avx2.cc  parser.py  results-block-16.txt  results-block-2.txt  results-block-8.txt  results-block-vec-8.txt  results-plot-vec.txt  results-plot.txt  results-vectorized.txt  results.txt
nbody/: Makefile  (+11 more)
(+13 files in other folders)
